Fix alignment of payment lists

--- a/weblate_web/static/style.css
+++ b/weblate_web/static/style.css
@@ -1488,8 +1488,11 @@ div.contact .form-line > div {
     padding: 5px;
 }
 .payment-listing {
-    padding: 5px 0;
+    margin: 5px 0;
     clear: both;
+}
+.payment-listing:first-child {
+    margin-top: 0;
 }
 .payment-form {
 	max-width: 910px;
